k8s/virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mrdebugger
  namespace: mrdebugger
spec:
  hosts:
  - "*"
  gateways:
  - mrdebugger
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mrdebugger
        port:
          number: 80
